--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "@types/mongoose": "^5.11.97",
+    "autoprefixer": "^10.4.16",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -32,11 +32,13 @@
     "mongoose": "^8.0.3",
     "next": "14.0.3",
     "next-auth": "^4.24.5",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "sonner": "^1.2.4",
     "tailwind-merge": "^2.1.0",
+    "tailwindcss": "^3.3.6",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
@@ -44,15 +46,16 @@
     "@playwright/test": "^1.40.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.10",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
-    "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
     "eslint-config-next": "14.0.3",
     "jest": "^29.7.0",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.3.6",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
 }
