--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -22,36 +22,38 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "jose": "^5.1.3",
-    "lucide-react": "^0.294.0",
+    "clsx": "^2.1.0",
+    "dotenv": "^16.4.7",
+    "jose": "^5.2.0",
+    "lines-and-columns": "^2.0.4",
+    "lucide-react": "^0.323.0",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3",
-    "next": "14.0.3",
+    "mongoose": "^8.1.1",
+    "next": "^13.5.7",
     "next-auth": "^4.24.5",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.2",
-    "sonner": "^1.2.4",
-    "tailwind-merge": "^2.1.0",
-    "tailwindcss": "^3.3.6",
+    "react-hook-form": "^7.50.0",
+    "sonner": "^1.4.0",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@playwright/test": "^1.40.1",
+    "@playwright/test": "^1.41.1",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jest": "^29.5.10",
+    "@types/jest": "^29.5.11",
     "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.10.4",
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
-    "eslint": "^8.55.0",
-    "eslint-config-next": "14.0.3",
+    "@types/node": "^20.11.16",
+    "@types/react": "^18.2.52",
+    "@types/react-dom": "^18.2.18",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "13.5.6",
     "jest": "^29.7.0",
     "typescript": "^5.3.3"
   },
